
  * gpg: Accept armored files without CRC24 checksum.  [T7071]

  * gpg: New --import-option "only-pubkeys".  [T7146]

  * gpg: Repurpose the AKL mechanism "ldap" to work like the keyserver
    mechnism but only for LDAP keyservers.  [rG6551281ca3]

  * gpg: ADSKs are now configurable for new keys.  [T6882]

  * gpg: New option --proc-all-sigs.  [T7261]

  * gpgsm: Emit user IDs with an empty Subject also in colon mode.
    [T7171]

  * agent: Consider an empty pattern file as valid.  [rGc27534de95]

  * agent: Fix error handling of READKEY.  [T6012]

  * agent: Avoid random errors when storing key in ephemeral mode.
    [T7129, rG19d93a239d]

  * agent: Make "SCD DEVINFO --watch" more robust.  [T7151]

  * scd: Improve KDF data object handling for OpenPGP cards.  [T7058]

  * scd: Avoid buffer overrun with more than 16 PC/SC readers.
    [T7129, rG524e3a9345]

  * scd: Fix how the scdaemon on its pipe connection finishes.
    [T7160]

  * gpgconf: Check readability of some files with -X and change its
    output format.  [rG759adb2493]

  * gpg-mail-tube: New tool to apply PGP/MIME encryption to a mail.
    [rGa564a9f66c]

  * Fix some uninitialized variables and double frees in error code
    paths.  [T7129]


  Release-info: https://dev.gnupg.org/T7030


Noteworthy changes in version 2.4.5 (2024-03-07)
------------------------------------------------

  * gpg,gpgv: New option --assert-pubkey-algo.  [T6946]

  * gpg: Emit status lines for errors in the compression layer.
    [T6977]

  * gpg: Fix invocation with --trusted-keys and --no-options.  [T7025]

  * gpgsm: Allow for a longer salt in PKCS#12 files.  [T6757]

  * gpgtar: Make --status-fd=2 work on Windows.  [T6961]

  * scd: Support for the ACR-122U NFC reader.  [rG1682ca9f01]

  * scd: Suport D-TRUST ECC cards.  [T7000,T7001]

  * scd: Allow auto detaching of kernel drivers; can be disabled with
    the new compatibility-flag ccid-no-auto-detach.  [rGa1ea3b13e0]
